[package]
name = "pingpong"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev="7ab30c41b0d537ffc552064156d1c8dca107306e" }
wat = { version = "1.0.61", default-features = false }
wit-component = { version = "0.7.4", default-features = false }